modified image retrieving function to take in multiple queries

--- a/CV_Project.ipynb
+++ b/CV_Project.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,14 +37,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://serpapi.com/search\n",
+      "https://serpapi.com/search\n",
+      "Downloading image number 1...\n",
+      "Downloading image number 2...\n",
+      "Downloading image number 3...\n",
+      "Downloading image number 4...\n",
+      "Downloading image number 5...\n",
+      "Downloading image number 6...\n",
+      "Downloading image number 7...\n",
+      "Downloading image number 8...\n",
+      "Downloading image number 9...\n",
+      "Downloading image number 10...\n",
+      "Downloading image number 11...\n",
+      "Downloading image number 12...\n",
+      "Downloading image number 13...\n",
+      "Downloading image number 14...\n",
+      "Downloading image number 15...\n",
+      "Downloading image number 16...\n",
+      "Downloading image number 17...\n",
+      "Downloading image number 18...\n",
+      "Downloading image number 19...\n",
+      "Downloading image number 20...\n",
+      "Downloading image number 21...\n",
+      "Downloading image number 22...\n",
+      "Downloading image number 23...\n",
+      "Downloading image number 24...\n",
+      "Downloading image number 25...\n",
+      "Downloading image number 26...\n",
+      "Downloading image number 27...\n"
+     ]
+    }
+   ],
    "source": [
     "queries = [\"pothole\", \"road\"]\n",
     "\n",
-    "for query in queries:\n",
-    "    serpapi_get_google_images(query, \"C:/Users/Polar/Downloads/AI_Camp/images\", verbose=True)"
+    "serpapi_get_google_images(queries, \"C:/Users/Polar/Downloads/AI_Camp/images\", verbose=True, max_images=10)"
    ]
   },
   {
